<resources>
    <string name="app_name">Alarm Shake</string>
    <string name="text_settings_actionbar">Settings</string>
    <string name="text_about_actionbar">About</string>
    <string name="banner_home_footer">ca-app-pub-3784006611687493/1845159867</string>
    <string name="banner_home_footer_app_id">ca-app-pub-3784006611687493~2697531949</string>
    <string name="text_title_add_alarm">Add Alarm</string>
    <string name="text_title_setting">Settings</string>
    <string name="text_title_update_alarm">Update Alarm</string>
    <string name="text_button_done">Done</string>
    <string name="text_button_delete">Delete</string>
    <string name="text_button_cancel">CANCEL</string>
    <string name="text_button_add">ADD</string>
    <string name="text_button_stop">STOP</string>
    <string name="text_no_alarm">No alarms</string>
    <string name="text_number_shake">Number shake to stop alarm:</string>
    <string name="text_speed_shake">Speed shake:</string>
    <string name="text_confirm_number_shake">You need shake %s times to stop alarm!</string>
    <string name="text_time">Time:</string>
    <string name="text_title">Title:</string>
    <string name="text_tone">Alarm tone:</string>
    <string name="text_click_stop">Click \'Stop\' to stop alarm!</string>
    <string name="text_shake">You need shake sharply your phone to stop alarm!</string>
    <string name="text_repaet">Repeat:</string>
    <string name="text_mon">Mon</string>
    <string name="text_tue">Tue</string>
    <string name="text_wed">Wed</string>
    <string name="text_thu">Thu</string>
    <string name="text_fri">Fri</string>
    <string name="text_sat">Sat</string>
    <string name="text_sun">Sun</string>
    <string name="text_select_alarm">Select alarm tone</string>
    <string name="text_alarm_clock">Alarm Clock!</string>
    <string name="text_none">None</string>
    <string name="text_add_success">Add success!</string>
    <string name="text_update_success">Update success!</string>
    <string name="text_updated">Updated!</string>
    <string name="text_delete_success">Delete success!</string>
    <string name="text_next">Next</string>
    <string name="text_title_screen_select_sound">Select sound</string>
    <string name="text_no_data">No data</string>
    <string name="text_purchase_success">Purchase successful!</string>
    <string name="text_purchase_faild">Purchase failed!</string>
    <string name="text_purchase_app">Purchase app</string>
    <string name="text_status_purchased">Purchased</string>
    <string name="text_you_need_login_gmail">You need login account Gmail.!</string>
    <string name="text_status_do_not_purchased">Do not purchased</string>
    <string name="text_remove_admob">Support and remove advertisements</string>
    <string name="text_alarm_wall_paper">Alarm wallpaper:</string>
    <string name="text_select_image">Select image</string>
    <string name="text_select_from_folder">Select from folder</string>
    <string name="text_image_from_system">Image from system</string>
    <string name="text_get_image_error">Get image error!</string>
    <string name="text_confirm_do_not_select_image">Are you sure you do not select the alarm wallpaper?</string>
    <string name="text_button_ok">OK</string>
    <string name="text_version_current">Current version:</string>
    <string name="text_update_title">Update</string>
    <string name="text_share_with_friend">Share with Friends</string>
    <string name="text_about_us">About us</string>
    <string name="text_website"><u>http://mor.vn/</u></string>
    <string name="text_name_company">MOR Corporation, Ltd</string>
    <string name="text_privacy_legal"><u>Privacy and Legal</u></string>
    <string name="text_check_version">Checking version....</string>
    <string name="text_show_button_stop_at_screen_alarm">Show button \'STOP\' at screen Alarm:</string>
    <string name="text_show_notification">Show notification:</string>
    <string name="text_user_receive_msm">Message recipients:</string>
    <string name="text_contact_no_number">The contact has no phone number!</string>
    <string name="text_message_send_contact">[Alarm shake]\n
        Alarm failed! At time %s\n
        Please call me wake up!
    </string>
    <string name="text_notice">Notification!</string>
    <string name="text_title_notice_has_version">New version Available!</string>
    <string name="text_current_version_lastest">The current version is the latest!</string>
    <string name="text_message_new_version">Please, update app to new version to continue resposting.</string>
    <string name="text_button_update">UPDATE</string>
    <string name="text_method_stop">Turn off alarms:</string>
    <string name="text_method_normal">Normal</string>
    <string name="text_method_shake">Shake</string>
    <string name="text_choose_one">Choose one</string>
    <string name="text_weather_actionbar">Weather</string>
    <string name="text_title_scree_news_and_weather">Weather</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="action_donate">Donate</string>
    <string name="provider">data provided by Yahoo! Weather</string>
    <string name="update">Last update</string>
    <string name="share_msg">There is a new weather app in the play store. Look here </string>
    <string name="city">City</string>
    <string name="pref_unit_title">Measure unit</string>
    <string name="temp_title">Temperature unit</string>
    <string name="loc_title">Location</string>
    <string name="pref_location_title">Choose the location</string>
    <string name="summary_loc">Current location</string>
    <string name="summary_temp">Current temperature unit</string>
    <string name="dlg_donate_msg">If you like my work and want to use the source code, please donate a beer to me</string>
    <string name="dlg_donate_ok">Donate!</string>
    <string name="dlg_donate_cancel">Cancel</string>
    <string name="text_archived">Archived</string>
    <string name="undo_label"><u>Undo</u></string>
    <string name="text_confirm_delete_image">Are you sure delete image use alarm wallpaper?</string>
    <string name="text_confirm_delete_sms">Are you sure delete alarm message recipients?</string>
    <string name="text_confirm_delete_tone">Are you sure delete tone alarm?</string>
    <string name="text_no_internet">No Internet connection!</string>
    <string name="text_archive">Archive</string>
    <string name="apiKey">3a9ed545f9a64e72ede0b617019faff5</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="setting_dateFormat">Date Format</string>
    <string name="setting_dateFormatCustom">Custom Date Format</string>
    <string name="setting_dateFormatCustom_summary">Provide the custom SimpleDateFormat string to be used</string>
    <string name="setting_lengthUnits">Length units</string>
    <string name="setting_speedUnits">Speed units</string>
    <string name="setting_tempUnits">Temperature units</string>
    <string name="setting_showTempAsInteger">Show temperature only as an integer</string>
    <string name="setting_pressureUnits">Pressure units</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_auto_detect_location">Detect Location</string>
    <string name="setting_differentiateDaysByTint">Differentiate Days with Color</string>
    <string name="setting_refreshInterval">Background refresh interval</string>
    <string name="setting_unit_mps">Meters per second (m/s)</string>
    <string name="setting_unit_kph">Kilometers per hour (kph)</string>
    <string name="setting_unit_mph">Miles per hour (mph)</string>
    <string name="setting_unit_bft">Beaufort wind scale (bft)</string>
    <string name="setting_unit_kn">Knots (kn)</string>
    <string name="setting_wind_direction_format">Wind direction format</string>
    <string name="settings_none">None</string>
    <string name="setting_apiKey">API key</string>
    <string name="setting_apiKey_summary">Custom API key for OpenWeatherMap queries</string>
    <string name="setting_unit_Celsuis">Celsius</string>
    <string name="setting_unit_Fahrenheit">Fahrenheit</string>
    <string name="setting_unit_Kelvin">Kelvin</string>
    <string name="setting_unit_mm">Millimeters (mm)</string>
    <string name="setting_unit_in">Inches (in)</string>
    <string name="setting_unit_hpa">hPa</string>
    <string name="setting_unit_kpa">kPa</string>
    <string name="setting_unit_mmhg">mm Hg</string>
    <string name="setting_unit_inhg">in Hg</string>
    <string name="speed_unit_mps">m/s</string>
    <string name="speed_unit_kph">kph</string>
    <string name="speed_unit_mph">mph</string>
    <string name="speed_unit_kn">kn</string>
    <string name="wind_direction_format_none">No indication</string>
    <string name="wind_direction_format_arrows">Arrows</string>
    <string name="wind_direction_format_abbreviations">Abbreviations</string>
    <string name="pressure_unit_hpa">hPa</string>
    <string name="pressure_unit_kpa">kPa</string>
    <string name="pressure_unit_mmhg">mm Hg</string>
    <string name="setting_theme_fresh">Fresh</string>
    <string name="setting_theme_classic">Classic</string>
    <string name="setting_theme_dark">Fresh Dark</string>
    <string name="setting_theme_classic_dark">Classic Dark</string>
    <string name="setting_theme_black">Fresh Black</string>
    <string name="setting_theme_classic_black">Classic Black</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="msg_err_parsing_json">Error parsing JSON.</string>
    <string name="msg_connection_problem">There is a problem with your internet connection.</string>
    <string name="msg_connection_not_available">Connection not available.</string>
    <string name="msg_city_not_found">Specified city is not found.</string>
    <string name="weather_sunny" >&#xf00d;</string>
    <string name="weather_clear_night" >&#xf02e;</string>
    <string name="weather_foggy" >&#xf014;</string>
    <string name="weather_cloudy" >&#xf013;</string>
    <string name="weather_rainy" >&#xf019;</string>
    <string name="weather_snowy" >&#xf01b;</string>
    <string name="weather_thunder" >&#xf01e;</string>
    <string name="weather_drizzle" >&#xf01c;</string>
    <string name="last_update">Last update:\n%s</string>
    <string name="last_update_widget">\nLast update: %s</string>
    <string name="wind_direction_north">N</string>
    <string name="wind_direction_north_north_east">NNE</string>
    <string name="wind_direction_north_east">NE</string>
    <string name="wind_direction_east_north_east">ENE</string>
    <string name="wind_direction_east">E</string>
    <string name="wind_direction_east_south_east">ESE</string>
    <string name="wind_direction_south_east">SE</string>
    <string name="wind_direction_south_south_east">SSE</string>
    <string name="wind_direction_south">S</string>
    <string name="wind_direction_south_south_west">SSW</string>
    <string name="wind_direction_south_west">SW</string>
    <string name="wind_direction_west_south_west">WSW</string>
    <string name="wind_direction_west">W</string>
    <string name="wind_direction_west_north_west">WNW</string>
    <string name="wind_direction_north_west">NW</string>
    <string name="wind_direction_north_north_west">NNW</string>
    <string name="msg_too_many_requests">Too many requests. Please try again.</string>
    <string name="dash_clock_status">%1$s%2$s</string>
    <string name="dash_clock_expanded_title">%1$s%2$s - %3$s</string>
    <string name="dash_clock_expanded_body">%1$s, %2$s\nWind: %3$s %4$s\nPressure: %5$s %6$s\nHumidity: %7$s %%\n</string>
</resources>