<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/loc_title">
        <Preference android:title="@string/pref_location_title"
            android:key="swa_loc">
            <intent android:targetPackage="alarmclock.app.com.alarmclock.settings"
                android:targetClass=".settings.CityFinderActivity"
                />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_unit_title">
        <ListPreference
            android:defaultValue="c"
            android:entries="@array/unit_names"
            android:entryValues="@array/unit_values"
            android:key="swa_temp_unit"
            android:title="@string/temp_title" />

    </PreferenceCategory>

</PreferenceScreen>