<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:gravity="center_vertical"
        android:text="@string/text_select_alarm"
        android:textColor="#FF00FF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/viewDica"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/tvTitle"
        android:layout_margin="10dp"
        android:background="@android:color/darker_gray" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layoutButton"
        android:layout_below="@+id/viewDica" />

    <LinearLayout
        android:id="@+id/layoutButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/text_button_add"
            android:textColor="@drawable/selector_button" />

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/text_button_cancel"
            android:textColor="@drawable/selector_button" />

        <TextView
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="OK"
            android:textColor="@drawable/selector_button" />
    </LinearLayout>
</RelativeLayout>